packages/next-swc/crates/core/tests/errors/server-actions/server-graph/2/output.js
/* __next_internal_action_entry_do_not_use__ bar */ import __create_action_proxy__ from "private-next-rsc-action-proxy";
'use strict';
export function bar() {}
import ensureServerEntryExports from "private-next-rsc-action-validate";
ensureServerEntryExports([
    bar
]);
__create_action_proxy__("ac840dcaf5e8197cb02b7f3a43c119b7a770b272", null, bar);
